@@ -24,7 +24,8 @@ INSTALLS +=  \
 
 SOURCES += main.cpp \
     emdaemon.cpp \
-    eventmonitorthread.cpp
+    eventmonitorthread.cpp \
+    rfkillmonitorthread.cpp
 
 # The following define makes your compiler emit warnings if you use
 # any feature of Qt which as been marked deprecated (the exact warnings
@@ -39,4 +40,5 @@ DEFINES += QT_DEPRECATED_WARNINGS
 
 HEADERS += \
     emdaemon.h \
-    eventmonitorthread.h
+    eventmonitorthread.h \
+    rfkillmonitorthread.h
