@@ -45,6 +45,7 @@ signals:
     Q_SCRIPTABLE void signalMakeClicked();
     Q_SCRIPTABLE void signalButtonClicked(int x, int y);
     Q_SCRIPTABLE void signalMediaKeyTrans(int code);
+    Q_SCRIPTABLE void signalRfkillStatusChanged();
 
 public slots:
     Q_SCRIPTABLE void exitService();
@@ -58,6 +59,7 @@ public slots:
     Q_SCRIPTABLE void emitMakeClicked();
     Q_SCRIPTABLE void emitButtonClicked(int x, int y);
     Q_SCRIPTABLE void emitMediaKeyTrans(int code);
+    Q_SCRIPTABLE void emitRfkillStatusChanged();
 
     Q_SCRIPTABLE QString getCameraBusinfo();
     Q_SCRIPTABLE int getCameraDeviceEnable();
